Add limitations section first draft

--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -1,5 +1,7 @@
 \documentclass{irsarticle}
 
+\usepackage{url}
+
 \begin{document}
 \title{\bf Recuperación de información geográfica}
 \author{Jorge J. Morgado Vega\qquad Roberto García Rodríguez}
@@ -12,7 +14,7 @@
 	Resumen del artículo
 \end{abstract}
 
-\keywords{recuperación de información, geografía}
+\keywords{recuperación de información, información geográfica}
 
 \newpage
 \tableofcontents
@@ -24,5 +26,109 @@
 \input{applications.tex}
 \input{pros_and_cons.tex}
 \input{challenges.tex}
+
+
+\begin{thebibliography}{}
+\bibitem{gey2007}
+Gey, F., Larson, R., Sanderson, M., Bischoff, K., Mandl, T., Womser-Hacker, C.,
+... \& Ferro, N. (2007). Challenges to evaluation of multilingual geographic
+information retrieval in GeoCLEF. In quot; In Workshop on Evaluation of
+Information Access (EVIA) May 15 (Tokyo Japan May 15 2007).
+
+\bibitem{jones2008}
+Jones, C. B., \& Purves, R. S. (2008). Geographical information retrieval.
+International Journal of Geographical Information Science, 22(3), 219-228.
+
+\bibitem{martins2005}
+Martins, B., Silva, M. J., \& Chaves, M. S. (2005, November). Challenges and
+resources for evaluating geographical IR. In Proceedings of the 2005 workshop
+on Geographic Information Retrieval (pp. 65-69).
+
+\bibitem{purves2011}
+Purves, R., \& Jones, C. (2011). Geographic information retrieval. SIGSPATIAL
+Special, 3(2), 2-4.
+
+\bibitem{purves2018}
+Purves, R. S., Clough, P., Jones, C. B., Hall, M. H., \& Murdock, V. (2018).
+Geographic information retrieval: Progress and challenges in spatial search of
+text. Foundations and Trends in Information Retrieval, 12(2-3), 164-318.
+
+\bibitem{purves2014}
+Purves, R. (2014). Geographic information retrieval: are we making progress. In
+NCGIA specialist meeting on spatial search (pp. 1-6).
+
+\bibitem{mandl2008}
+Mandl, T., Gey, F., Nunzio, G. D., Ferro, N., Sanderson, M., Santos, D., \&
+Womser-Hacker, C. (2008). An evaluation resource for Geographical Information
+Retrieval. In quot; In Proceedings of the 6 th International Conference on
+Language Resources and Evaluation (LREC 2008)(Marrakech 28-30 May 2008)
+European Language Resources Association (ELRA). European Language Resources
+Association (ELRA).
+
+\bibitem{buscaldi2009}
+Buscaldi, D. (2009, July). Toponym ambiguity in geographical information
+retrieval. In Proceedings of the 32nd international acm sigir conference on
+research and development in information retrieval (pp. 847-847).
+
+\bibitem{cai2011}
+Cai, G. (2011). Relevance ranking in geographical information retrieval.
+SIGSPATIAL Special, 3(2), 33-36.
+
+\bibitem{purves2004}
+Purves, R., \& Jones, C. (2004, December). Workshop on geographic information
+retrieval, SIGIR 2004. In ACM SIGIR Forum (Vol. 38, No. 2, pp. 53-56). New
+York, NY, USA: ACM.
+
+\bibitem{kumar2011}
+Kumar, C. (2011, August). Relevance and ranking in geographic information
+retrieval. In Fourth BCS-IRSG Symposium on Future Directions in Information
+Access (FDIA 2011) 4 (pp. 2-7).
+
+\bibitem{janowicz2011}
+Janowicz, K., Raubal, M., \& Kuhn, W. (2011). The semantics of similarity in
+geographic information retrieval. Journal of Spatial Information Science, (2),
+29-57.
+
+\bibitem{larson2004sep}
+Larson, R. R., \& Frontiera, P. (2004, September). Spatial ranking methods for
+geographic information retrieval (GIR) in digital libraries. In International
+Conference on Theory and Practice of Digital Libraries (pp. 45-56). Springer,
+Berlin, Heidelberg.
+
+\bibitem{larson2004jul}
+Larson, R. R., \& Frontiera, P. (2004, July). Ranking and representation for
+geographic information retrieval. In Extended abstract in SIGIR 2004 Workshop
+on Geographic Information Retrieval.
+
+\bibitem{li1994}
+Li, R. (1994). Data structures and application issues in 3-D geographic
+information systems. Geomatica, 48(3), 209-224.
+
+\bibitem{deAndrade2014}
+de Andrade, F. G., de Souza Baptista, C., \& Davis, C. A. (2014). Improving
+geographic information retrieval in spatial data infrastructures.
+GeoInformatica, 18(4), 793-818.
+
+\bibitem{abdelmoty2005}
+Abdelmoty, A. I., Smart, P. D., Jones, C. B., Fu, G., \& Finch, D. (2005). A
+critical evaluation of ontology languages for geographic information retrieval
+on the Internet. Journal of Visual Languages \& Computing, 16(4), 331-358.
+
+\bibitem{brown1999}
+Brown, I. (1999). Developing a virtual reality user interface (VRUI) for
+geographic information retrieval on the Internet. Transactions in GIS, 3(3),
+207-220.
+
+\bibitem{martins2007}
+Martins, B., Borbinha, J., Pedrosa, G., Gil, J., \& Freire, N. (2007, November).
+Geographically-aware information retrieval for collections of digitized
+historical maps. In Proceedings of the 4th ACM Workshop on Geographical
+information Retrieval (pp. 39-42).
+
+\bibitem{laMancha}
+Castilla-La Mancha. (2021, October 26). Wikipedia. Retrieved October 30, 2021,
+from \url{https://es.wikipedia.org/wiki/Castilla-La_Mancha#Toponimia}.
+
+\end{thebibliography}
 
 \end{document}
