--- a/pros_and_cons.tex
+++ b/pros_and_cons.tex
@@ -1,4 +1,72 @@
-\section{Ventajas y desventajas}\label{sec:pros-and-cons}
+\section{Beneficios y limitantes}\label{sec:pros-and-cons}
 
-~
+\subsection{Limitantes}\label{sec:limit}
+
+Muchas son las limitantes de los sitemas de recuperación de información
+geográfica hoy en día \cite{purves2011,purves2004}. Entre los muchos
+inconvenientes en este campo se pueden mencionar: ambiguedades toponómicas,
+falta de estandarización para describir los datos, falta de una métrica de
+clasificación efectiva para organizar los resultados recuperados de una
+consulta, etc. En las próximas secciones se describirián estas limitantes de
+manera detallada.
+
+\subsubsection{Ambiguedades toponómicas}\label{sec:ambig}
+
+Uno de los principales problemas en la recuperación de información, y en
+específico a la información geográfica, es la amiguedad (en el caso abordado en
+este artículo: la toponimia \cite{buscaldi2009}). Es muy común, a nivel global,
+que algunos lugares no tengas un nombre propio, sino que sean nombrados por
+alguna circunstancia, objeto o inclusoo el nombre de una persona. Entre los
+diferentes tipos de ambiguedades se encuentran: lugares nombres de objetos (ej.
+Granada, La Palma, Palo Seco, La Paz, Las Tunas, Perico); nombres de personas
+(ej. San Martín, Santiago, St. Louis, Santa Marta, Artemisa), lugares nombrados
+por alguna circunstancia (ej. Matanzas, Limonar, Nevada, La Mancha\footnote{La
+teoría más extendida estipula que es un nombre heredado de una palabra árabe la
+cual significaba ``lugar seco'' \cite{laMancha}.}); lugares con el mismo nombre
+(ej. Versalles en Méjico y Francia, Santiago en Cuba y Chile\footnote{En este
+caso la desambiguación está dada por el nombre oficial de ambas ciudades
+(Santiago de Cuba y Santiago de Chile)}, Washington (el estado) y Washington (la
+ciudad) en Estados Unidos).
+
+\subsubsection{Falta de estandarización}\label{sec:estand}
+
+Otro de los problemas claves en la recuperación de información geográfica es la
+falta de estandarización de los datos \cite{deAndrade2014}. Como es sabido
+existen diversas formas de guardar información sobre un lugar. Una forma simple
+y efectiva es guardar las coordenadas geográficas (latitud y longitud), sin
+embargo, no siempre es efectivo este método. Las coordenadas solo denotan un
+lugar exacto, por tanto grandes áreas no pueden ser representadas con una
+coordenada. Otra forma puede ser guardar el nombre del lugar, no obstante,
+además de las ambiguedades que esto genera, surgen otros problemas. Muchos
+lugares no son siempre son referidos exactamente por su nombre, por ejemplo: la
+Gran Manzana (Manhatan), la Ciudad del Pecado (Las vegas), la Ciudad del Sol
+(Miami), la Llave del Golfo (Cuba), etc. Incluso, existen lugares que, por las
+diversidad de lenguajes que existen en la zona, tienen dos nombre diferentes.
+
+No obstante a esta limitación, se han hecho algunos esfuerzos por mejorar la
+representación de datos geográficos. Entre ellos se encuentran: GML un
+\emph{markup language} dedicado a la representación de dominios geográficos y
+OWL un lenguaje de representación de ontología genérico. Sin embargo, estos
+lenguajes aún no pueden representar de forma completa los datos geográficos
+\cite{abdelmoty2005}.
+
+\subsubsection{Falta de una métrica de clasificación efectiva}\label{sec:metric}
+
+Una de las partes más importantes de la recuperación de información es la
+clasificación efectiva de los datos, y con ellos, datos geográficos
+\cite{purves2004,mandl2008,cai2011}. El análisis de similitudes entre los datos
+es uno de los factores claves en la extracción correcta de esta información
+\cite{janowicz2011}. Sin embargo, el problema de clasificar información
+geográfica es mucho más dinámico que solo dar un resultado basado en
+similitudes textuales o espaciales entre datos de una fuente (ej. servicios
+móviles basados en la ubicación del usuario) \cite{kumar2011}.
+
+Al clasificar datos geográficos, muchos son los factores que dificultan la
+clasificación como: el lugar donde se realiza la búsqueda (ej. cuando se quiere
+encontrar alguna cafetería cercana), la fuente de donde se extraen los datos,
+los factores vistos en las secciones \ref{sec:ambig} y \ref{sec:estand}, etc.
+
+A pesar de estas limitantes varios estudios se han realizado sobre la evaluación
+de la efectividad de los diversos algoritmos de clasificación de datos geográficos
+ \cite{larson2004jul, larson2004sep}.
 
