Add characteristics section first draft

--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -1,6 +1,8 @@
 \documentclass{irsarticle}
 
 \usepackage{url}
+\usepackage[utf8]{inputenc}
+
 
 \begin{document}
 \title{\bf Recuperación de información geográfica}
@@ -29,6 +31,10 @@
 
 
 \begin{thebibliography}{}
+
+\bibitem{chang2016}
+Chang, K. T. (2016). Geographic information system. International Encyclopedia of Geography: People, the Earth, Environment and Technology: People, the Earth, Environment and Technology, 1-9.
+
 \bibitem{gey2007}
 Gey, F., Larson, R., Sanderson, M., Bischoff, K., Mandl, T., Womser-Hacker, C.,
 ... \& Ferro, N. (2007). Challenges to evaluation of multilingual geographic
