--- a/characteristics.tex
+++ b/characteristics.tex
@@ -1,3 +1,19 @@
 \section{Características del problema}\label{sec:prob-charact}
 
 ~
+Los Sistemas de Recuperación de Información (SRI) tienen una amplia gama de
+variantes, surgidos a partir de las distintas necesidades de la vida diaria y
+problemas presentados en el desarrollo de la humanidad, cada vez más complejos
+y con la necesidad de herramientas cada vez más fuertes que ayuden en la
+solución de los mismos. 
+
+La Recuperación de Información Geográfica (GRI) es una de estas variantes. GRI
+surge de la unión de de los SRI y los Sistemas de Información Geográficos(SIG),
+los cuales se enfovan en el desarrollo y uso de teorías, métodos, tecnología y
+datos para comprender los procesos geográficos, relaciones y patrones
+\cite{chang2016}.
+
+GRI son técnicas para construir un sistema de aplicación que pueda indexar,
+consultar, recuperar y navegar por la información georreferenciada. Se supone
+que GRI puede comprender mejor el conocimiento geográfico contenido en la web
+documentos y consultas de los usuarios, y proporcionar una respuesta más satisfactoria a las necesidades de los usuarios.
