Add benefits section first draft

--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -33,7 +33,19 @@
 \begin{thebibliography}{}
 
 \bibitem{chang2016}
-Chang, K. T. (2016). Geographic information system. International Encyclopedia of Geography: People, the Earth, Environment and Technology: People, the Earth, Environment and Technology, 1-9.
+Chang, K. T. (2016). Geographic information system. International Encyclopedia
+of Geography: People, the Earth, Environment and Technology: People, the Earth,
+Environment and Technology, 1-9.
+
+\bibitem{artz2009}
+ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
+\url{https://gisandscience.com/2009/09/14/top-five-benefits-of-gis/}
+
+\bibitem{scholten1991}
+Scholten, H. J., \& De Lepper, M. J. (1991). The benefits of the application of
+geographical information systems in public and environmental health. World
+health statistics quarterly. Rapport trimestriel de statistiques sanitaires
+mondiales, 44(3), 160-170.
 
 \bibitem{gey2007}
 Gey, F., Larson, R., Sanderson, M., Bischoff, K., Mandl, T., Womser-Hacker, C.,
