--- a/pros_and_cons.tex
+++ b/pros_and_cons.tex
@@ -1,6 +1,52 @@
 \section{Beneficios y limitantes}\label{sec:pros-and-cons}
 
-\subsection{Limitantes}\label{sec:limit}
+La extracción de datos geográficos de manera general puede ser de gran utilidad
+en diferentes campos de investigación e incluso en la vida cotidiana
+\cite{artz2009}. Muchos son los beneficios y limitantes que existen al procesar
+información espacial. En las siguientes secciones se realizará una descripción
+de los puntos fuertes y débiles más relevantes en los sistemas de recuperación
+de información geográfica.
+
+\subsection{Análisis de patrones geográficos}\label{sec:patr}
+
+El análisis de patrones geográficos puede ser fundamental para la administración
+de una empresa, localidad, país, etc. Se pueden analizar todo tipo de patrones
+como: taza de crimen por zonas, trafico de vehículos por zonas, los diferentes
+lenguajes que se hablen en una zona, censos, etc. De esta manera se puede, por ejemplo,
+distribuir de una manera mejor diferentes recursos como: el nivel de seguridad
+policial en algún barrio, dónde es mejor situar una tienda o carteles promocionales,
+qué zonas priorizar en la protección de desamparados, etc.
+
+Con la extracción de estos datos se puede conocer mejor no solo la situación
+actual de una zona en cuanto a un determinado tema, sino también el cambio que
+ha experimentado en el tiempo.
+
+\subsection{Salud ambiental}\label{sec:pros}
+
+Uno de los principales beneficios de la extracción correcta de datos
+geográficos es para analizar los cambios ambientales \cite{scholten1991} en el
+planeta, o algún area en específico (muy relacionado con el tema tratado en la
+sección \ref{sec:patr}). Con estos datos se puede determinar el impacto de la
+actividad humana en el ambiente, como por ejemplo la contaminación de la
+atmósfera, la contaminación de los recursos hídricos, la contaminación de los
+suelos, etc. Una recuperación efectiva de datos relacoinados con la salud
+ambiental es crucial para el estudio de los cambios ambientales pasados y
+futuros.
+
+\subsection{Toma de decisiones}\label{sec:deci}
+
+Otro de los principales beneficios de la extracción de datos geográficos está
+presente generalmente al tomar deciciones. Los ejemplos son vastos, pueden ir
+desde niveles empresariales (ej. empresas que quiere ampliar su negocio a otras
+zonas; empresas distribuidoras de paquetes que quiere seleccionar las mejores
+rutas; empresas que se dediquen a la extracción de recuros naturales) así como
+a niveles más personales (ej. buscar restaurantes cercanos, planificar viajes, etc).
+
+Estas desiciones, sin importan su naturaleza, son muchas veces de gran impacto
+para el la persona o institución que las toma. En la mayoría de los casos,
+las mismas pueden ahorar tiempo y dinero.
+
+\subsection{Principales limitantes}\label{sec:limit}
 
 Muchas son las limitantes de los sitemas de recuperación de información
 geográfica hoy en día \cite{purves2011,purves2004}. Entre los muchos
