Fix characteristics draft

--- a/characteristics.tex
+++ b/characteristics.tex
@@ -7,13 +7,18 @@ problemas presentados en el desarrollo de la humanidad, cada vez más complejos
 y con la necesidad de herramientas cada vez más fuertes que ayuden en la
 solución de los mismos. 
 
-La Recuperación de Información Geográfica (GRI) es una de estas variantes. GRI
+La Recuperación de Información Geográfica (RIG) es una de estas variantes. RGI
 surge de la unión de de los SRI y los Sistemas de Información Geográficos(SIG),
 los cuales se enfovan en el desarrollo y uso de teorías, métodos, tecnología y
 datos para comprender los procesos geográficos, relaciones y patrones
 \cite{chang2016}.
 
-GRI son técnicas para construir un sistema de aplicación que pueda indexar,
+
+La RGI son herramientas de búsqueda para buscar en la web, documentos
+empresariales y búsqueda local móvil que combinan consultas tradicionales
+basadas en texto con consultas de ubicación, como mapas o nombres de lugares.
+Son técnicas para construir un sistema de aplicación que pueda indexar,
 consultar, recuperar y navegar por la información georreferenciada. Se supone
-que GRI puede comprender mejor el conocimiento geográfico contenido en la web
-documentos y consultas de los usuarios, y proporcionar una respuesta más satisfactoria a las necesidades de los usuarios.
+que RGI puede comprender mejor el conocimiento geográfico contenido en la web
+documentos y consultas de los usuarios, y proporcionar una respuesta más
+satisfactoria a las necesidades de los usuarios.
