Add first draft of future challenges section

--- a/characteristics.tex
+++ b/characteristics.tex
@@ -1,6 +1,5 @@
 \section{Características del problema}\label{sec:prob-charact}
 
-~
 Los Sistemas de Recuperación de Información (SRI) tienen una amplia gama de
 variantes, surgidos a partir de las distintas necesidades de la vida diaria y
 problemas presentados en el desarrollo de la humanidad, cada vez más complejos
@@ -22,3 +21,5 @@ consultar, recuperar y navegar por la información georreferenciada. Se supone
 que RGI puede comprender mejor el conocimiento geográfico contenido en la web
 documentos y consultas de los usuarios, y proporcionar una respuesta más
 satisfactoria a las necesidades de los usuarios.
+
+\newpage
