--- a/pros_and_cons.tex
+++ b/pros_and_cons.tex
@@ -116,3 +116,4 @@ A pesar de estas limitantes varios estudios se han realizado sobre la evaluació
 de la efectividad de los diversos algoritmos de clasificación de datos geográficos
  \cite{larson2004jul, larson2004sep}.
 
+ \newpage
