Add applications first draft

--- a/applications.tex
+++ b/applications.tex
@@ -2,3 +2,49 @@
 
 \newpage
 
+Como se puede deducir las aplicaciones de este sistemas son tan variadas como
+uno pueda imaginarse, resolviendo así miles de problemas tanto cotideanos como
+como en el ámbito de la ciencia.
+
+Hoy en día, muchos de los problemas resueltos están orientados espacialmente,
+significa que cada vez más personas necesitan utilizar información espacial.
+Deben poder utilizarlo rápidamente, sin ninguna herramienta de software
+especial y sin ninguna formación especial. Por eso necesitan una solución
+fácil de usar.
+
+A continuación algunas de estas aplicaciones.
+
+\subsection{Búsqueda local móvil}\label{sec:mobile}
+
+Quizás una de las aplicaciones más importantes que se le puede atribuir a la
+RIG. En la actualidad, el uso de dispositivos móviles casi se ha vuelto una
+necesidad en la vida de todo ser humano, y las búsquedas en INTERNET son las
+acciones más frecuentes en la web. Preguntas como: \emph{?` Cúal es el
+restaurante más cercano?, ?` Estoy cerca del teatro X ?} o quizás consultas
+como: \emph{Gasolineras cerca, Barberías a menos de 1Km}. Todas estás
+cuestiones deben ser resueltas usando RIG, brindando una respuesta acertada y
+ahorrando tiempo al usuario \cite{teevan2011, lymberopoulos2011}. 
+
+\subsection{Neogeografía}\label{sec:neogeo}
+
+\subsection{Geoweb}\label{sec:geoweb}
+
+Geoweb o Web geográfica(\emph{Geographic Web} según su nombre en inglés)
+describe como la información a la cual se accede en línea es cada vez más
+relevante para el lugar donde uno se encuentra. Se puede encontrar usos
+variados en este tema, desde la Economía Política con evidencias en las
+práticas estatales\cite{leszczynski2012}; hasta sitios para el análisis
+de relaciones cívicas ciudadanas\cite{johnson2015}.
+
+Geoweb es la fusión de información geográfica (basada en la ubicación) con la
+información general que está disponible en Internet. Los Geonavegadores son
+una expresión de este concepto, siendo \emph{Google Maps} uno de los productos
+estrella en la actualidad donde mediante el procesamiento de datos y la
+indexación con contenido geográfico es uno de los servicios más preciados y
+usados dentro de la Geoweb
+
+El interés en una Geoweb ha avanzado por las nuevas tecnologías,
+conceptos y productos, específicamente la popularización del posicionamiento
+con GPS, siendo este uno de los aportes más preciados. GPS, otra maravilla de
+la ciencia, se posiciona como un producto ampliamente usado, dejando claro la
+importancia de los servicios geoweb.
