--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -37,6 +37,28 @@ Chang, K. T. (2016). Geographic information system. International Encyclopedia
 of Geography: People, the Earth, Environment and Technology: People, the Earth,
 Environment and Technology, 1-9.
 
+\bibitem{teevan2011}
+Teevan, J., Karlson, A., Amini, S., Brush, A. B., \& Krumm, J. (2011, August).
+Understanding the importance of location, time, and people in mobile local
+search behavior. In Proceedings of the 13th international conference on human
+computer interaction with mobile devices and services (pp. 77-80).
+
+\bibitem{leszczynski2012}
+Leszczynski, A. (2012). Situating the geoweb in political economy.
+Progress in human geography, 36(1), 72-89.
+
+\bibitem{johnson2015}
+Johnson, P. A., Corbett, J. M., Gore, C., Robinson, P., Allen, P., \& Sieber,
+R. (2015). A web of expectations: Evolving relationships in community
+participatory Geoweb projects. ACME: An International Journal for Critical
+Geographies, 14(3), 827-848.
+
+\bibitem{lymberopoulos2011}
+Lymberopoulos, D., Zhao, P., Konig, C., Berberich, K., \& Liu, J.
+(2011, October). Location-aware click prediction in mobile local search. In
+Proceedings of the 20th ACM international conference on Information and
+knowledge management (pp. 413-422).
+
 \bibitem{artz2009}
 ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
 \url{https://gisandscience.com/2009/09/14/top-five-benefits-of-gis/}
