--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -2,6 +2,7 @@
 
 \usepackage{url}
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
 
 
 \begin{document}
@@ -168,6 +169,19 @@ information Retrieval (pp. 39-42).
 \bibitem{laMancha}
 Castilla-La Mancha. (2021, October 26). Wikipedia. Retrieved October 30, 2021,
 from \url{https://es.wikipedia.org/wiki/Castilla-La_Mancha#Toponimia}.
+
+\bibitem{purves2007} Purves, R. S., Clough, P., Jones, C. B., Arampatzis, A., Bucher, B.,
+Finch, D., ... \& Yang, B. (2007). The design and implementation of SPIRIT: a
+spatially aware search engine for information retrieval on the Internet.
+International journal of geographical information science, 21(7), 717-745.
+
+\bibitem{perea2007} Perea-Ortega, J. M., Cumbreras, M. Á. G., Vega, M. G., \&
+Montejo-Ráez, A. (2007). GEOUJA System. University of Jaén at GeoCLEF 2007. In
+CLEF (Working Notes).
+
+\bibitem{bordogna2012} Bordogna, G., Ghisalberti, G., \& Psaila, G. (2012). Geographic
+information retrieval: Modeling uncertainty of user's context. Fuzzy Sets and
+Systems, 196, 105-124.
 
 \end{thebibliography}
 
