Add applications second draft

--- a/applications.tex
+++ b/applications.tex
@@ -1,14 +1,11 @@
 \section{Aplicaciones}\label{sec:appl}
 
-Como se puede deducir las aplicaciones de este sistemas son tan variadas como
-uno pueda imaginarse, resolviendo así miles de problemas tanto cotideanos como
-como en el ámbito de la ciencia.
-
-Hoy en día, muchos de los problemas resueltos están orientados espacialmente,
-significa que cada vez más personas necesitan utilizar información espacial.
-Deben poder utilizarlo rápidamente, sin ninguna herramienta de software
-especial y sin ninguna formación especial. Por eso necesitan una solución
-fácil de usar.
+La aplicación de estos sistemas cada vez son más frecuentes, en ámbitos tanto
+cotideanos como científicos. Hoy en día, muchos de los problemas resueltos
+están orientados espacialmente, lo que significa que cada vez más personas
+necesitan utilizar información espacial, rápido acceso a estos medios,
+softwares y aplicaiones fáciles de usar (\emph{user friendly} en inglés), que
+requieran de conociemientos específicos ni formación especial.
 
 A continuación algunas de estas aplicaciones.
 
@@ -24,6 +21,20 @@ cuestiones deben ser resueltas usando RIG, brindando una respuesta acertada y
 ahorrando tiempo al usuario \cite{teevan2011, lymberopoulos2011}. 
 
 \subsection{Neogeografía}\label{sec:neogeo}
+
+Aunque el uso de la Neogeografía no suelen se formales ni analíticos, esta
+basada en el uso de técnicas y herramientas geográficas para actividades
+personales o de interes especifico de un grupo de personas no expertas en el
+tema.\cite{turner2006}
+
+El monitoreo del medioambiente con el uso de información geográfica es una de
+las ramas de trabajo que actualmente se encuentra en investigación
+\cite{connors2012}. 
+
+Se trata principalmente del análisis de datos brindados de forma voluntaria
+usada por personas para crear sus mapas, los cuales responden a necesidades
+específicas, ya sean medioambientales, económicas, politicas o de interes
+social. \cite{harris2012}
 
 \subsection{Geoweb}\label{sec:geoweb}
 
