--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -60,6 +60,15 @@ Lymberopoulos, D., Zhao, P., Konig, C., Berberich, K., \& Liu, J.
 Proceedings of the 20th ACM international conference on Information and
 knowledge management (pp. 413-422).
 
+\bibitem{turner2006}
+Turner, A. (2006). Introduction to neogeography. " O'Reilly Media, Inc.".
+
+\bibitem{connors2012}
+Connors, J. P., Lei, S., \& Kelly, M. (2012). Citizen science in the age of neogeography: Utilizing volunteered geographic information for environmental monitoring. Annals of the Association of American Geographers, 102(6), 1267-1289.
+
+\bibitem{harris2012}
+Harris, T. M., \& Lafone, H. F. (2012). Toward an informal spatial data infrastructure: voluntary geographic information, neogeography, and the role of citizen sensors. SDI, Communities and Social Media, 8, 8-12.
+
 \bibitem{artz2009}
 ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
 \url{https://gisandscience.com/2009/09/14/top-five-benefits-of-gis/}
