Add evaluation first draft

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,4 +1,49 @@
 \section{Evaluación del sistema}\label{sec:eval}
 
+La naturaleza determinista de los SRI propicia su necesidad intrínseca de
+evaluación. Por ello y paralelamente al desarrollo de su tecnología, surge un
+amplio campo de trabajo dedicado específicamente a la determinación de medidas
+que permitan valorar su efectividad. Un repaso exhaustivo de la bibliografía
+especializada permite identificar varios grupos de evaluaciones: las basadas
+en la relevancia de los documentos, las basadas en los usuarios y un tercer
+grupo de medidas alternativas a la realización de los juicios de relevancia,
+que pretenden evitar afectarse de las dosis de subjetividad que estos juicios
+poseen de forma inherente.
+
+Los sistemas RGI, como cualquier otro sistema, son susceptibles de ser
+sometidos a evaluación, con el fin de que sus usuarios se encuentren en
+condiciones de valorar su efectividad y, de este modo, adquieran confianza
+en los mismos
+
+El proceso de los sistemas RGI en principio son bastante parecidos a los 
+sistemas SRI estandar, variando solo algunos pasos específicos que el propio
+sistema impone dada las caracteristicas del mismo y del problema que pretende
+resolver, como la detección de entidades geográficas. \cite{Kornai2005}
+
+En este punto surge una nueva cuestión, si bien podría parecer trivial a
+primera vista, puede marcar en gran medida el resultado de un proceso de
+evaluación. Esta cuestión no es otra que responder con certeza a la pregunta
+``?`cuándo la información es relevante?".
+
+El término relevancia significa ``calidad o condición de relevante,
+importancia, significación", y el término relevante lo define como
+``importante o significativo". Entendiendose, por extensión de las definiciones
+anteriores, que una información recuperada se puede considerar relevante
+cuando el contenido de la misma posee alguna significación o importancia
+con motivo de la pregunta realizada por el usuario, es decir, con su
+necesidad de información.
+
+Los primeros estudios de evaluación de los SRI datan casi del surgimiento de
+los mismos, siendo estos los pioneros de la evaluación de los sistemas, los
+cuales sirvieron de base para la creación de futuros métodos y análisis que
+se fueron transformando a través del tiempo y adaptándose a los nuevos
+sistemas que fueron apareciendo. Estos estudios son Cranfield,
+MEDLARS o SMART. \cite{bors2000}
+
+
+
+
+
+
 \newpage
 
