--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -64,10 +64,25 @@ knowledge management (pp. 413-422).
 Turner, A. (2006). Introduction to neogeography. " O'Reilly Media, Inc.".
 
 \bibitem{connors2012}
-Connors, J. P., Lei, S., \& Kelly, M. (2012). Citizen science in the age of neogeography: Utilizing volunteered geographic information for environmental monitoring. Annals of the Association of American Geographers, 102(6), 1267-1289.
+Connors, J. P., Lei, S., \& Kelly, M. (2012). Citizen science in the age of
+neogeography: Utilizing volunteered geographic information for environmental
+monitoring. Annals of the Association of American Geographers, 102(6),
+1267-1289.
 
 \bibitem{harris2012}
-Harris, T. M., \& Lafone, H. F. (2012). Toward an informal spatial data infrastructure: voluntary geographic information, neogeography, and the role of citizen sensors. SDI, Communities and Social Media, 8, 8-12.
+Harris, T. M., \& Lafone, H. F. (2012). Toward an informal spatial data
+infrastructure: voluntary geographic information, neogeography, and the role
+of citizen sensors. SDI, Communities and Social Media, 8, 8-12.
+
+\bibitem{Kornai2005}
+Kornai, A. (2005, September). Evaluating geographic information retrieval. In
+Workshop of the Cross-Language Evaluation Forum for European Languages (pp.
+928-938). Springer, Berlin, Heidelberg.
+
+\bibitem{bors2000}
+Bors, N. ‘Information retrieval, experimental models and
+statistical analysis’. Journal of Documentation, vol 56, nº 1 January 2000. p.
+71-90
 
 \bibitem{artz2009}
 ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
