Fix minor errors

--- a/applications.tex
+++ b/applications.tex
@@ -1,10 +1,10 @@
 \section{Aplicaciones}\label{sec:appl}
 
-La aplicación de estos sistemas cada vez son más frecuentes, en ámbitos tanto
-cotideanos como científicos. Hoy en día, muchos de los problemas resueltos
-están orientados espacialmente, lo que significa que cada vez más personas
-necesitan utilizar información espacial, rápido acceso a estos medios,
-softwares y aplicaiones fáciles de usar (\emph{user friendly} en inglés), que
+Las aplicaciones de estos sistemas cada vez son más frecuentes, en ámbitos
+tanto cotideanos como científicos. Hoy en día, muchos de los problemas
+resueltos están orientados espacialmente, lo que significa que cada vez más
+personas necesitan utilizar información espacial, rápido acceso a estos medios,
+softwares y aplicaiones fáciles de usar (\emph{user friendly} en inglés), que no
 requieran de conociemientos específicos ni formación especial.
 
 A continuación algunas de estas aplicaciones.
@@ -22,7 +22,7 @@ ahorrando tiempo al usuario \cite{teevan2011, lymberopoulos2011}.
 
 \subsection{Neogeografía}\label{sec:neogeo}
 
-Aunque el uso de la Neogeografía no suelen se formales ni analíticos, esta
+Aunque los usos de la Neogeografía no suelen se formales ni analíticos, está
 basada en el uso de técnicas y herramientas geográficas para actividades
 personales o de interes especifico de un grupo de personas no expertas en el
 tema.\cite{turner2006}
@@ -33,7 +33,7 @@ las ramas de trabajo que actualmente se encuentra en investigación
 
 Se trata principalmente del análisis de datos brindados de forma voluntaria
 usada por personas para crear sus mapas, los cuales responden a necesidades
-específicas, ya sean medioambientales, económicas, politicas o de interes
+específicas, ya sean medioambientales, económicas, políticas o de interés
 social. \cite{harris2012}
 
 \subsection{Geoweb}\label{sec:geoweb}
