--- a/architecture.tex
+++ b/architecture.tex
@@ -80,7 +80,7 @@ Primeramente el usuario ingresa una búsqueda (en cuatro posibles idiomas) la
 cual, en caso de ser necesario se traduce al inglés utilizando el susbsistema
 de traducción, y se envía al subsistema de recuperación de información para
 extraer los documentos relevantes. Esta búsqueda es también procesada por los
-subsistemas de búsqueda de relaciones geográficas y reonocimiento de nombres de
+subsistemas de búsqueda de relaciones geográficas y reconocimiento de nombres de
 entidades. Luego de este preprocesamiento, y en conjunto con los documentos
 relvantes extraídos previamente, se realiza un validación de los mismos y se
 devuelve al usuario un conjunto de documentos que el sistema en general
