--- a/evaluation.tex
+++ b/evaluation.tex
@@ -16,7 +16,7 @@ condiciones de valorar su efectividad y, de este modo, adquieran confianza
 en los mismos
 
 El proceso de los sistemas RGI en principio son bastante parecidos a los 
-sistemas SRI estandar, variando solo algunos pasos específicos que el propio
+sistemas SRI estándar, variando solo algunos pasos específicos que el propio
 sistema impone dada las caracteristicas del mismo y del problema que pretende
 resolver, como la detección de entidades geográficas. \cite{Kornai2005}
 
@@ -27,7 +27,7 @@ evaluación. Esta cuestión no es otra que responder con certeza a la pregunta
 
 El término relevancia significa ``calidad o condición de relevante,
 importancia, significación", y el término relevante lo define como
-``importante o significativo". Entendiendose, por extensión de las definiciones
+``importante o significativo". Entendiéndose, por extensión de las definiciones
 anteriores, que una información recuperada se puede considerar relevante
 cuando el contenido de la misma posee alguna significación o importancia
 con motivo de la pregunta realizada por el usuario, es decir, con su
@@ -39,10 +39,6 @@ cuales sirvieron de base para la creación de futuros métodos y análisis que
 se fueron transformando a través del tiempo y adaptándose a los nuevos
 sistemas que fueron apareciendo. Estos estudios son Cranfield,
 MEDLARS o SMART. \cite{bors2000}
-
-
-
-
 
 
 \newpage
