--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -11,7 +11,7 @@
 \date{}
 \maketitle
 
-\institution{Facultad de Matemática y computación, Universidad de la Habana}
+\institution{Facultad de Matemática y Computación, Universidad de la Habana}
 
 \begin{abstract}
 	Resumen del artículo
