--- a/pros_and_cons.tex
+++ b/pros_and_cons.tex
@@ -4,14 +4,13 @@ La extracción de datos geográficos de manera general puede ser de gran utilida
 en diferentes campos de investigación e incluso en la vida cotidiana
 \cite{artz2009}. Muchos son los beneficios y limitantes que existen al procesar
 información espacial. En las siguientes secciones se realizará una descripción
-de los puntos fuertes y débiles más relevantes en los sistemas de recuperación
-de información geográfica.
+de los puntos fuertes y débiles más relevantes en los sistemas de RIG.
 
 \subsection{Análisis de patrones geográficos}\label{sec:patr}
 
 El análisis de patrones geográficos puede ser fundamental para la administración
 de una empresa, localidad, país, etc. Se pueden analizar todo tipo de patrones
-como: taza de crimen por zonas, trafico de vehículos por zonas, los diferentes
+como: taza de crimen por zonas, tráfico de vehículos por zonas, los diferentes
 lenguajes que se hablen en una zona, censos, etc. De esta manera se puede, por ejemplo,
 distribuir de una manera mejor diferentes recursos como: el nivel de seguridad
 policial en algún barrio, dónde es mejor situar una tienda o carteles promocionales,
@@ -29,7 +28,7 @@ planeta, o algún area en específico (muy relacionado con el tema tratado en la
 sección \ref{sec:patr}). Con estos datos se puede determinar el impacto de la
 actividad humana en el ambiente, como por ejemplo la contaminación de la
 atmósfera, la contaminación de los recursos hídricos, la contaminación de los
-suelos, etc. Una recuperación efectiva de datos relacoinados con la salud
+suelos, etc. Una recuperación efectiva de datos relacionados con la salud
 ambiental es crucial para el estudio de los cambios ambientales pasados y
 futuros.
 
@@ -42,9 +41,9 @@ zonas; empresas distribuidoras de paquetes que quiere seleccionar las mejores
 rutas; empresas que se dediquen a la extracción de recuros naturales) así como
 a niveles más personales (ej. buscar restaurantes cercanos, planificar viajes, etc).
 
-Estas desiciones, sin importan su naturaleza, son muchas veces de gran impacto
-para el la persona o institución que las toma. En la mayoría de los casos,
-las mismas pueden ahorar tiempo y dinero.
+Estas desiciones, sin importar su naturaleza, son muchas veces de gran impacto
+para la persona o institución que las toma. En la mayoría de los casos,
+las mismas pueden ahorrar tiempo y dinero.
 
 \subsection{Principales limitantes}\label{sec:limit}
 
@@ -61,8 +60,8 @@ manera detallada.
 Uno de los principales problemas en la recuperación de información, y en
 específico a la información geográfica, es la amiguedad (en el caso abordado en
 este artículo: la toponimia \cite{buscaldi2009}). Es muy común, a nivel global,
-que algunos lugares no tengas un nombre propio, sino que sean nombrados por
-alguna circunstancia, objeto o inclusoo el nombre de una persona. Entre los
+que algunos lugares no tengan un nombre propio, sino que sean nombrados por
+alguna circunstancia, objeto o incluso el nombre de una persona. Entre los
 diferentes tipos de ambiguedades se encuentran: lugares nombres de objetos (ej.
 Granada, La Palma, Palo Seco, La Paz, Las Tunas, Perico); nombres de personas
 (ej. San Martín, Santiago, St. Louis, Santa Marta, Artemisa), lugares nombrados
@@ -85,7 +84,7 @@ lugar exacto, por tanto grandes áreas no pueden ser representadas con una
 coordenada. Otra forma puede ser guardar el nombre del lugar, no obstante,
 además de las ambiguedades que esto genera, surgen otros problemas. Muchos
 lugares no son siempre son referidos exactamente por su nombre, por ejemplo: la
-Gran Manzana (Manhatan), la Ciudad del Pecado (Las vegas), la Ciudad del Sol
+Gran Manzana (Manhattan), la Ciudad del Pecado (Las Vegas), la Ciudad del Sol
 (Miami), la Llave del Golfo (Cuba), etc. Incluso, existen lugares que, por las
 diversidad de lenguajes que existen en la zona, tienen dos nombre diferentes.
 
