--- a/challenges.tex
+++ b/challenges.tex
@@ -1,7 +1,7 @@
 \section{Desafíos futuros}\label{sec:chall}
 
 Muchos son los desafíos que exiten en vías de mejorar la recuperación de datos
-geográficos. Entre los más mencionados \cite{purves2014}, se enceuntran:
+geográficos. Entre los más mencionados \cite{purves2014}, se encuentran:
 detectar referencias geográficas en forma de nombres y lugares, así como
 referencias espaciales asociadas a calificadores de lenguaje natural en
 documentos de textos o en búsquedas hechas por los usuarios; desambiguar nombre
@@ -10,11 +10,11 @@ descriptivos como ``Midlands'' y de referencias espaciales poco descriptivas
 como ``cerca'', ``lejos'', etc.; indexar documentos respecto a el contenido
 geográfico; desarrollar interfaces gráficas que faciliten el acceso a datos
 geográficos; desarrollar métodos de evaluación para los diferentes sistemas de
-GIR; entre otros.
+RIG; entre otros.
 
 En publicaciones más recientes \cite{purves2018}, se exponen como desafíos:
-entender la importancia que tiene la información geográfica en diferents campos
-inversigativos como las ciencias de la computación, geometría computacional,
+entender la importancia que tiene la información geográfica en diferentes campos
+investigativos como las ciencias de la computación, geometría computacional,
 linguística, etc.; la aplicación del \emph{machine learning} y \emph{deep
 learning} en el procesamiento de lenguaje natural como vía para la
 clasificación o recopilación de datos y referencias geográficas; la publicación
@@ -36,7 +36,7 @@ desafíos enunciados posteriormente.
 \subsection{Detección de referencias espaciales en textos}\label{sec:detect}
 
 La extracción de locaciones geográficas en textos es uno de los desafíos más
-importantes en la recuperación de datos geográficos. Especificamente, se plantea
+importantes en la recuperación de datos geográficos. Específicamente, se plantea
 no solo la extracción mediante la resolución de nombres directamente, sino
 el reconocimiento de referencias espaciales. A modo de resumen: saber cuando una
 información hace referencia a un lugar geográfico (aún cuando no se mencione
@@ -46,7 +46,7 @@ directamente). Esto es conocido como reconocmiento toponómico.
 descriptivas}\label{sec:geom}
 
 En muchas ocaciones los nombres de lugares al ser poco conocidos, pueden no
-encontrarse entre los nombres conocidos geograficamente hablando. Si a esto
+encontrarse entre los nombres conocidos geográficamente hablando. Si a esto
 se le suma el hecho de que estos nombres pueden ser poco descriptivos, entonces
 la tarea de relacionarlos con una locación puede ser bien complicada. Además,
 en muchos casos, los lugares son referenciados mediante otros lugares (ej. 
@@ -56,20 +56,20 @@ los mismos.
 \subsection{Desarrollo de interfaces gráficas}\label{sec:gui}
 
 Debido a la gran diveridad que existe para la representación de datos
-geográficos el desarrollo de una interfáz gráfica cómoda, sencilla y eficiente
+geográficos el desarrollo de una interfaz gráfica cómoda, sencilla y eficiente
 para el usuario es uno de los desafíos más importantes a tener en cuenta. De
-nada sirve poder tener un buen modelo de GIR si no se puede entender de forma
-correcta la búsqueda del usuaro, o si los resultados se muestran de manera
+nada sirve poder tener un buen modelo de RIG si no se puede entender de forma
+correcta la búsqueda del usuario, o si los resultados se muestran de manera
 ineficiente. Según la bibliografía, mostrar los resultados de una búsqueda en
-un sistema de GIR no ha avanzado mucho más que mostrar puntos en un mapa. Es
-por ello que la geovisualización es un punto clave en los GIR.
+un sistema de RIG no ha avanzado mucho más que mostrar puntos en un mapa. Es
+por ello que la geovisualización es un punto clave en los RIG.
 
 
 \subsection{Importancia de la información geográfica en diferentes
 campos}\label{sec:import}
 
 Este punto puede no parecer un desafío, sin embargo, muchos no conocen o relacionan
-la importancia que tiene el estudio de datos geograficos (así como su extracción)
+la importancia que tiene el estudio de datos geográficos (así como su extracción)
 en diferentes campos investigativos como: las ciencias de la computación, la 
 geometría computacional, la linguística, siencias de la información, etc.
 
@@ -89,10 +89,10 @@ integración de estas herramientas en el procesamiento de lenguaje natural para
 la recuperación de datos geográficos.
 
 En muchos casos estas herramientas son entrenadas con un conjunto de datos que
-contienen informacion adicional en forma de meta datos, lo cual no es un escenario
-muy realista, donde normalmente la mayoria de la información está no estructurada.
+contienen informacion adicional en forma de metadatos, lo cual no es un escenario
+muy realista, donde normalmente la mayoría de la información está no estructurada.
 Esto aumenta considerablemnte la complejidad del problema y lo hace un desafío más
-en los sistemas de recuperación de información geográfica.
+en los sistemas de recuperación RIG.
 
 \subsection{Evaluación y publicación de métodos, algortimos, datos y
 resultados reproducibles}\label{sec:publ}
@@ -102,7 +102,7 @@ importantes es la publicación de los mismos de manera reproducible, así como
 los métodos, algoritmos y conjunto de datos usados. En muchos casos, los
 resultados obtenidos no se encuentran bien documentados, o no hacen referencias
 y comparaciones con otros método. Esto está ligado directamente con el hecho de
-que la evaluación de los sistemas de recuperación de información geográfica todavía
+que la evaluación de los sistemas RIG todavía
 es un punto débil en este campo.
 
 
