--- a/characteristics.tex
+++ b/characteristics.tex
@@ -8,7 +8,7 @@ solución de los mismos.
 
 La Recuperación de Información Geográfica (RIG) es una de estas variantes. RGI
 surge de la unión de de los SRI y los Sistemas de Información Geográficos(SIG),
-los cuales se enfovan en el desarrollo y uso de teorías, métodos, tecnología y
+los cuales se enfocan en el desarrollo y uso de teorías, métodos, tecnología y
 datos para comprender los procesos geográficos, relaciones y patrones
 \cite{chang2016}.
 
@@ -18,7 +18,7 @@ empresariales y búsqueda local móvil que combinan consultas tradicionales
 basadas en texto con consultas de ubicación, como mapas o nombres de lugares.
 Son técnicas para construir un sistema de aplicación que pueda indexar,
 consultar, recuperar y navegar por la información georreferenciada. Se supone
-que RGI puede comprender mejor el conocimiento geográfico contenido en la web
+que RGI puede comprender mejor el conocimiento geográfico contenido en la web,
 documentos y consultas de los usuarios, y proporcionar una respuesta más
 satisfactoria a las necesidades de los usuarios.
 
